--- a/Midterm/css/lab.css
+++ b/Midterm/css/lab.css
@@ -30,8 +30,16 @@ label.orange {
   color: orange;
 }
 
-label.violet {
-  color: violet;
+label.brown {
+  color: sienna;
+}
+
+label.beige {
+  color: papayawhip;
+}
+
+label.purple {
+  color: purple;
 }
 
 label.grey {
