--- a/Midterm/css/lab.css
+++ b/Midterm/css/lab.css
@@ -2,7 +2,7 @@ button.w3-button.w3-xlarge.w3-theme.w3-hover-teal {
     display: none;
 }
 #logo {
-    height: 80px;
+    height: 20px;
 }
 
 i.fa.fa-home.w3-margin-right {
@@ -64,4 +64,37 @@ label.pink {
 
 label.blue {
   color: blue;
+}
+
+/* Style the navbar */
+#navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Navbar links */
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+/* Page content */
+.content {
+  padding: 16px;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
 }
